--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion = 3.3
-envlist = lint, py3{8,9,10}, docs, confluence, sandbox
+envlist = lint, py3{8,9,10,11}, docs, linkcheck, doctests
 isolated_build = True
 requires = tox-conda
 
@@ -8,29 +8,26 @@ requires = tox-conda
 description = Invoke pytest to run automated tests
 allowlist_externals =
     sh
+    sphinx-build
 sitepackages = False
 conda_channels =
     https://conda.anaconda.org/conda-forge/
 setenv =
     TOXINIDIR = {toxinidir}
     PIP_DISABLE_PIP_VERSION_CHECK = 1
+    COVERAGE_FILE = {env:COVERAGE_FILE:{toxworkdir}/.coverage.{envname}}
 passenv =
-    CONFLUENCE_PUBLISH_TOKEN
-    CONFLUENCE_PUBLISH_URL
-    CONFLUENCE_PUBLISH_USER
-    CONFLUENCE_PUBLISH_SPACE
-    CONFLUENCE_PUBLISH_PARENT
     HOME
     SETUPTOOLS_*
     PYTEST_*
     TWINE_USERNAME
     TWINE_PASSWORD
-conda_deps =
-    py3{8,9,10,11}: pytest
-    py3{8,9,10,11}: pytest-mock
-    py3{8,9,10,11}: pytest-fixture-config
+conda_env =
+    py3{8,9,10,11}: {toxinidir}/conda_envs/tests_env.yml
 commands =
-    {posargs:pytest}
+    # run pytest with coverage reporting with junitxml output inside COVERAGE_FILE
+    python -m pytest --cov --junitxml={env:COVERAGE_FILE}.xml --cov-report=term-missing {posargs}
+
 
 [testenv:clean]
 description =
@@ -65,15 +62,14 @@ passenv =
 commands =
     pre-commit run --all-files {posargs}
 
-
 [testenv:{build,clean}]
 description =
     build: Build the package in isolation according to PEP517, see https://github.com/pypa/build
     clean: Remove old distribution files and temporary build artifacts (./build and ./dist)
 
 skip_install = True
-conda_env =
-    {toxinidir}/conda_envs/pypi_build_env.yml
+#conda_env =
+#    {toxinidir}/conda_envs/pypi_build_env.yml
 passenv =
     SETUPTOOLS_*
 commands_pre =
@@ -86,17 +82,20 @@ commands =
 description =
     Build the conda package
 skip_install = True
-conda_env =
-    {toxinidir}/conda_envs/conda_build_env.yml
+# conda_env =
+#     {toxinidir}/conda_envs/conda_build_env.yml
 commands =
     conda build conda-recipe
+commands_post =
+    conda build purge
 
 [testenv:{docs,doctests,linkcheck}]
 description =
     docs: Invoke sphinx-build to build the docs
     doctests: Invoke sphinx-build to run doctests
     linkcheck: Check for broken links in the documentation
-basepython = python
+skip_install = True
+basepython = python3
 passenv =
     SETUPTOOLS_*
 setenv =
@@ -125,42 +124,8 @@ passenv =
     TWINE_PASSWORD
     TWINE_REPOSITORY
     TWINE_REPOSITORY_URL
-deps = twine
+conda_deps =
+    twine
 commands =
     python -m twine check dist/*
     python -m twine upload {posargs:--repository {env:TWINE_REPOSITORY:testpypi}} dist/*
-
-[testenv:confluence]
-description = sphinx-build to build the confluence formatted docs. This will not publish to confluence.
-parallel_show_output = False
-setenv =
-    DOCSDIR = {toxinidir}/docs
-    BUILD = confluence
-    BUILDDIR = {toxworkdir}/confluence/_build
-conda_env =
-    {[testenv:docs]conda_env}
-depends =
-    confluence: docs
-commands =
-    sphinx-build -W --keep-going -b {env:BUILD} "{env:DOCSDIR}" "{env:BUILDDIR}/{env:BUILD}" -E -a {posargs}
-    python3 -c 'import pathlib; print("Confluence documentation available under file://\{0\}".format(pathlib.Path(r"{toxworkdir}") / "docs/_build/confluence" / "index.conf"))'
-
-[testenv:develop]
-usedevelop = True
-deps =
-commands =
-    {posargs}
-
-[testenv:docs-sandbox]
-description = publish the docs to confluence sandbox
-skip_install = True
-basepython = python
-conda_env =
-    {toxinidir}/conda_envs/docs_env.yml
-setenv =
-passenv =
-commands_pre =
-# TODO: add a command to make sure the docs builds and publish to confluence sandbox
-commands =
-    {posargs}
-commands_post =
