Github actions update, fix some linting

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion = 3.3
-envlist = lint, py3{8,9,10,11}, docs, linkcheck, doctests
+envlist = lint, docs, linkcheck, doctests
 isolated_build = True
 requires = tox-conda
 
@@ -57,7 +57,8 @@ passenv =
     HOMEPATH
     PROGRAMDATA
     SETUPTOOLS_*
-# commands_pre =
+# Uncomment the following line to enable pre-commit autoupdates
+#commands_pre =
 #    pre-commit autoupdate
 commands =
     pre-commit run --all-files {posargs}
