--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,106 +39,25 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
+      with: {fetch-depth: 0}  # deep clone for setuptools-scm
 
     - name: Setup Miniconda
       uses: conda-incubator/setup-miniconda@v2
       with:
-        auto-activate-base: false
+        auto-update-conda: true
+        auto-activate-base: true
         python-version: ${{ matrix.python-version }}
-        environment-file: conda_envs/ci_env.yml
-        activate-environment: github-actions
-
-    - name: Run Tox
-      shell: bash -l {0}
       run: |
-        tox -e ${{ matrix.tox-env }}
+        conda config --set always_yes yes --set changeps1 no
+        conda info -a
+        conda install -c conda-forge tox tox-conda
 
-
-
-jobs:
-  prepare:
-    runs-on: ubuntu-latest
-    outputs:
-      wheel-distribution: ${{ steps.wheel-distribution.outputs.path }}
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-        with: {fetch-depth: 0}  # deep clone for setuptools-scm
-      -name : setup Miniconda
-        uses: conda-incubator/setup-miniconda@v2
-        with:
-          auto-update-conda: true
-          auto-activate-base: false
-          python-version: {{ matrix.python-version }}
-          
-      
-
-      - name: Run static analysis and format checkers
-        run: pipx run pre-commit run --all-files --show-diff-on-failure
-      - name: Build package distribution files
-        run: >-
-          pipx run --python '${{ steps.setup-python.outputs.python-path }}'
-          tox -e clean,build
-      - name: Record the path of wheel distribution
-        id: wheel-distribution
-        run: echo "path=$(ls dist/*.whl)" >> $GITHUB_OUTPUT
-      - name: Store the distribution files for use in other stages
-        # `tests` and `publish` will use the same pre-built distributions,
-        # so we make sure to release the exact same package that was tested
-        uses: actions/upload-artifact@v3
-        with:
-          name: python-distribution-files
-          path: dist/
-          retention-days: 1
-
-  test:
-    needs: prepare
-    strategy:
-      matrix:
-        python:
-        - "3.8"  # oldest Python supported
-        - "3.11"  # newest Python that is stable
-        platform:
-        - ubuntu-latest
-        - macos-latest
-        - windows-latest
-    runs-on: ${{ matrix.platform }}
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
-        id: setup-python
-        with:
-          python-version: ${{ matrix.python }}
-      - name: Retrieve pre-built distribution files
-        uses: actions/download-artifact@v3
-        with: {name: python-distribution-files, path: dist/}
-      - name: Run tests
-        run: >-
-          pipx run --python '${{ steps.setup-python.outputs.python-path }}'
-          tox --installpkg '${{ needs.prepare.outputs.wheel-distribution }}'
-          -- -rFEx --durations 10 --color yes  # pytest args
-      - name: Generate coverage report
-        run: pipx run coverage lcov -o coverage.lcov
-      - name: Upload partial coverage report
-        uses: coverallsapp/github-action@master
-        with:
-          path-to-lcov: coverage.lcov
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          flag-name: ${{ matrix.platform }} - py${{ matrix.python }}
-          parallel: true
-
-  finalize:
-    needs: test
-    runs-on: ubuntu-latest
-    steps:
-      - name: Finalize coverage report
-        uses: coverallsapp/github-action@master
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          parallel-finished: true
+    - name: Run static analysis and format checkers
+      shell: bash
+      run: tox -p auto
 
   publish:
-    needs: finalize
+    name: Publish on PyPI
     if: ${{ github.event_name == 'push' && contains(github.ref, 'refs/tags/') }}
     runs-on: ubuntu-latest
     permissions:
