--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,5 +1,5 @@
 [settings]
 profile = black
-known_first_party = ats_linter
+known_first_party = "ats_linter"
 known_third_party = ['pytest', 'loguru']
 src_paths = ['tests', 'src']
