--- a/tox.ini
+++ b/tox.ini
@@ -1,33 +1,37 @@
 [tox]
 minversion = 3.3
-envlist = lint, docs, linkcheck, doctests
+envlist = py3{8,9,10,11}, lint, docs, linkcheck, doctests
 isolated_build = True
 requires = tox-conda
 
 [testenv]
 description = Invoke pytest to run automated tests
+parallel_show_output = False
 allowlist_externals =
+    rm
     sh
     sphinx-build
 sitepackages = False
 conda_channels =
-    https://conda.anaconda.org/conda-forge/
+    conda-forge
 setenv =
     TOXINIDIR = {toxinidir}
     PIP_DISABLE_PIP_VERSION_CHECK = 1
-    COVERAGE_FILE = {env:COVERAGE_FILE:{toxworkdir}/.coverage.{envname}}
+    py3{8,9,10,11}: COVERAGE_FILE = {env:COVERAGE_FILE:{toxworkdir}/.coverage.{envname}}
 passenv =
     HOME
     SETUPTOOLS_*
-    PYTEST_*
-    TWINE_USERNAME
-    TWINE_PASSWORD
-conda_env =
-    py3{8,9,10,11}: {toxinidir}/conda_envs/tests_env.yml
+    py3{8,9,10,11}: PYTEST_*
+conda_deps =
+    py3{8,9,10,11}: pytest
+    py3{8,9,10,11}: pytest-cov
+    py3{8,9,10,11}: pytest-mock
+    py3{8,9,10,11}: pytest-fixture-config
+    py3{8,9,10,11}: setuptools_scm
+    py3{8,9,10,11}: setuptools
 commands =
     # run pytest with coverage reporting with junitxml output inside COVERAGE_FILE
-    python -m pytest --cov --junitxml={env:COVERAGE_FILE}.xml --cov-report=term-missing {posargs}
-
+    python -m pytest --cov --cov-branch --junitxml={env:COVERAGE_FILE}.xml --cov-report=term {posargs}
 
 [testenv:clean]
 description =
@@ -38,8 +42,8 @@ skipsdist = True
 usedevelop = False
 basepython = python3
 deps =
-conda_env =
-    {toxinidir}/conda_envs/clean_env.yml
+conda_deps =
+    aiofiles
 setenv =
 passenv =
 commands_pre =
@@ -47,32 +51,33 @@ commands =
 commands_post =
     python {toxinidir}/project_cleaner.py
 
-# # To run `tox -e lint` you need to make sure you have a
-# # `.pre-commit-config.yaml` file. See https://pre-commit.com
 [testenv:lint]
 description = Perform static analysis and style checks
+parallel_show_output = False
 skip_install = True
 conda_deps = pre-commit
 passenv =
     HOMEPATH
     PROGRAMDATA
     SETUPTOOLS_*
-# Uncomment the following line to enable pre-commit autoupdates
+# Uncomment the following line to enable pre-commit to auto update the hooks
 #commands_pre =
 #    pre-commit autoupdate
 commands =
-    pre-commit run --all-files {posargs}
+    {posargs:pre-commit run --all-files}
 
 [testenv:{build,clean}]
 description =
     build: Build the package in isolation according to PEP517, see https://github.com/pypa/build
     clean: Remove old distribution files and temporary build artifacts (./build and ./dist)
-
 skip_install = True
-#conda_env =
-#    {toxinidir}/conda_envs/pypi_build_env.yml
+skipsdist = True
 passenv =
     SETUPTOOLS_*
+conda_deps =
+    build: pip
+    build: build
+    build: setuptools_scm
 commands_pre =
     clean,build: python -c 'import shutil; [shutil.rmtree(p, True) for p in ("build", "dist", "docs/_build")]'
     clean,build: python -c 'import pathlib, shutil; [shutil.rmtree(p, True) for p in pathlib.Path("src").glob("*.egg-info")]'
@@ -83,8 +88,10 @@ commands =
 description =
     Build the conda package
 skip_install = True
-# conda_env =
-#     {toxinidir}/conda_envs/conda_build_env.yml
+conda_deps =
+    conda-build
+    conda-verify
+
 commands =
     conda build conda-recipe
 commands_post =
@@ -95,6 +102,7 @@ description =
     docs: Invoke sphinx-build to build the docs
     doctests: Invoke sphinx-build to run doctests
     linkcheck: Check for broken links in the documentation
+parallel_show_output = False
 skip_install = True
 basepython = python3
 passenv =
@@ -105,12 +113,13 @@ setenv =
     docs: BUILD = html
     doctests: BUILD = doctest
     linkcheck: BUILD = linkcheck
-conda_env =
-    {toxinidir}/conda_envs/docs_env.yml
+conda_deps =
+    sphinx
+    sphinx-autodoc-typehints
+    sphinx-rtd-theme
 commands =
     sphinx-build -W --keep-going --color -b {env:BUILD} -d "{env:BUILDDIR}/doctrees" "{env:DOCSDIR}" "{env:BUILDDIR}/{env:BUILD}" {posargs}
     python3 -c 'import pathlib; print("Documentation available under file://\{0\}".format(pathlib.Path(r"{toxworkdir}") / "docs/_build/html" / "index.html"))'
-
 
 [testenv:publish]
 description =
@@ -120,7 +129,6 @@ description =
 skip_install = True
 changedir = {toxinidir}
 passenv =
-    # See: https://twine.readthedocs.io/en/latest/
     TWINE_USERNAME
     TWINE_PASSWORD
     TWINE_REPOSITORY
