--- a/tox.ini
+++ b/tox.ini
@@ -12,26 +12,33 @@ allowlist_externals =
     sh
     sphinx-build
 sitepackages = False
+basepython =
+    py38: python3.8
+    py39: python3.9
+    py310: python3.10
+    py311: python3.11
 conda_channels =
     conda-forge
+    defaults
 setenv =
     TOXINIDIR = {toxinidir}
     PIP_DISABLE_PIP_VERSION_CHECK = 1
     py3{8,9,10,11}: COVERAGE_FILE = {env:COVERAGE_FILE:{toxworkdir}/.coverage.{envname}}
 passenv =
+    HOMEPATH
+    PROGRAMDATA
     HOME
     SETUPTOOLS_*
-    py3{8,9,10,11}: PYTEST_*
+    PYTEST_*
+    SSH_AUTH_SOCK
 conda_deps =
     py3{8,9,10,11}: pytest
     py3{8,9,10,11}: pytest-cov
     py3{8,9,10,11}: pytest-mock
     py3{8,9,10,11}: pytest-fixture-config
-    py3{8,9,10,11}: setuptools_scm
-    py3{8,9,10,11}: setuptools
 commands =
     # run pytest with coverage reporting with junitxml output inside COVERAGE_FILE
-    python -m pytest --cov --cov-branch --junitxml={env:COVERAGE_FILE}.xml --cov-report=term {posargs}
+    #pytest --cov --cov-branch --junitxml={env:COVERAGE_FILE}.xml --cov-report=term {posargs}
 
 [testenv:clean]
 description =
@@ -91,9 +98,8 @@ skip_install = True
 conda_deps =
     conda-build
     conda-verify
-
 commands =
-    conda build conda-recipe
+    conda build conda-recipe --no-anaconda-upload --check {posargs}
 commands_post =
     conda build purge
 
