changed the file permissions

--- a/tox.ini
+++ b/tox.ini
@@ -12,11 +12,6 @@ allowlist_externals =
     sh
     sphinx-build
 sitepackages = False
-basepython =
-    py38: python3.8
-    py39: python3.9
-    py310: python3.10
-    py311: python3.11
 conda_channels =
     conda-forge
     defaults
@@ -25,20 +20,19 @@ setenv =
     PIP_DISABLE_PIP_VERSION_CHECK = 1
     py3{8,9,10,11}: COVERAGE_FILE = {env:COVERAGE_FILE:{toxworkdir}/.coverage.{envname}}
 passenv =
-    HOMEPATH
-    PROGRAMDATA
     HOME
     SETUPTOOLS_*
     PYTEST_*
-    SSH_AUTH_SOCK
+    SSH_AUTH_*
+    TWINE_*
 conda_deps =
-    py3{8,9,10,11}: pytest
-    py3{8,9,10,11}: pytest-cov
-    py3{8,9,10,11}: pytest-mock
-    py3{8,9,10,11}: pytest-fixture-config
+    pytest
+    pytest-cov
+    pytest-mock
+    pytest-fixture-config
 commands =
     # run pytest with coverage reporting with junitxml output inside COVERAGE_FILE
-    #pytest --cov --cov-branch --junitxml={env:COVERAGE_FILE}.xml --cov-report=term {posargs}
+    pytest --cov --cov-branch --junitxml={env:COVERAGE_FILE}.xml --cov-report=term {posargs}
 
 [testenv:clean]
 description =
