--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,13 +43,14 @@ jobs:
       with:
         channels: conda-forge
         miniconda-version: "latest"
-        auto-activate-base: true
-        conda-packages: tox
+        auto-activate-base: false
+        activate-environment: test-env
         python-version: 3.11
 
-    - name: Run static analysis, format checkers and documentation tests
+    - name: Install tox and start tox with ${{ matrix.tox-envs }}
       shell: bash -l {0}
       run: |
+        conda install tox
         tox -e ${{ matrix.tox-envs }}
 
   test:
@@ -59,6 +60,7 @@ jobs:
       fail-fast: false
       matrix:
         tox-envs: [py38, py39, py310, py311]
+        python-version: [3.8, 3.9, 3.10, 3.11]
 
     steps:
       - name: Checkout code
@@ -71,15 +73,19 @@ jobs:
           channels: conda-forge
           miniconda-version: "latest"
           auto-activate-base: false
+          activate-environment: test-env
+          python-version: ${{ matrix.python-version }}
 
       - name: Run unit tests
         shell: bash -l {0}
         run: |
           conda install tox
+          which python
+          which tox
           tox -e ${{ matrix.tox-envs }}
 
   build:
-    needs: prepare, test
+    needs: [prepare, test]
     name: Build on linux
     runs-on: ubuntu-latest
     outputs:
@@ -100,7 +106,7 @@ jobs:
         with:
           channels: conda-forge
           miniconda-version: "latest"
-          auto-activate-base: false
+          auto-activate-base: true
 
       - name: Build package
         shell: bash -l {0}
@@ -127,7 +133,7 @@ jobs:
         with:
           channels: conda-forge
           miniconda-version: "latest"
-          auto-activate-base: false
+          auto-activate-base: true
           python-version: 3.11
       - name: Retrieve pre-built distribution files
         uses: actions/download-artifact@v3
@@ -158,7 +164,7 @@ jobs:
         with:
           channels: conda-forge
           auto-update-conda: false
-          auto-activate-base: false
+          auto-activate-base: true
           python-version: 3.11
       - name: Deploy Package
         shell: bash -l {0}
