Update tox.ini skips intrepreters

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,8 @@
 [tox]
 minversion = 3.3
-envlist = py3{8,9,10,11}, lint, docs, linkcheck, doctests
+envlist = py3{8,9,10,11}
 isolated_build = True
+skip_missing_interpreters = True
 requires = tox-conda
 
 [testenv]
