--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,9 @@ jobs:
       fail-fast: false
       matrix:
         tox-envs: [docs, doctests, linkcheck, lint]
-
+    defaults:
+      run:
+        shell: bash -el {0}
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
@@ -59,7 +61,9 @@ jobs:
       fail-fast: false
       matrix:
         python-version: [3.8, 3.9, 3.10, 3.11]
-
+    defaults:
+      run:
+        shell: bash -el {0}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -92,7 +96,9 @@ jobs:
       fail-fast: false
       matrix:
         tox-envs: [build]
-
+    defaults:
+      run:
+        shell: bash -el {0}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -123,6 +129,9 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+    defaults:
+      run:
+        shell: bash -el {0}
     steps:
       - name: Setup Miniconda
         uses: conda-incubator/setup-miniconda@v2
@@ -153,6 +162,9 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+    defaults:
+      run:
+        shell: bash -el {0}
     steps:
       - name: Setup Miniconda
         uses: conda-incubator/setup-miniconda@v2
