Update tox.ini run without conda

--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,6 @@ minversion = 3.3
 envlist = py3{8,9,10,11}
 isolated_build = True
 skip_missing_interpreters = True
-requires = tox-conda
 
 [testenv]
 description = Invoke pytest to run automated tests
@@ -26,7 +25,7 @@ passenv =
     PYTEST_*
     SSH_AUTH_*
     TWINE_*
-conda_deps =
+deps =
     pytest
     pytest-cov
     pytest-mock
@@ -44,8 +43,7 @@ skipsdist = True
 usedevelop = False
 basepython = python3
 deps =
-conda_deps =
-    aiofiles
+   aiofiles
 setenv =
 passenv =
 commands_pre =
@@ -76,7 +74,7 @@ skip_install = True
 skipsdist = True
 passenv =
     SETUPTOOLS_*
-conda_deps =
+deps =
     build: pip
     build: build
     build: setuptools_scm
@@ -114,7 +112,7 @@ setenv =
     docs: BUILD = html
     doctests: BUILD = doctest
     linkcheck: BUILD = linkcheck
-conda_deps =
+deps =
     sphinx
     sphinx-autodoc-typehints
     sphinx-rtd-theme
@@ -134,7 +132,7 @@ passenv =
     TWINE_PASSWORD
     TWINE_REPOSITORY
     TWINE_REPOSITORY_URL
-conda_deps =
+deps =
     twine
 commands =
     python -m twine check dist/*
