--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,18 +40,14 @@ jobs:
       uses: actions/checkout@v3
       with: {fetch-depth: 0}  # deep clone for setuptools-scm
 
-    - name: Setup Miniconda
-      uses: conda-incubator/setup-miniconda@v2
+    - name: Set up Python
+      uses: actions/setup-python@v4
       with:
-        channels: conda-forge
-        miniconda-version: "latest"
-        auto-activate-base: false
-        activate-environment: test-env
-        python-version: "latest"
+        python-version: 3.1
 
     - name: Install tox and start tox with ${{ matrix.tox-envs }}
       run: |
-        conda install tox
+        pip install tox
         tox -e ${{ matrix.tox-envs }}
 
   test:
@@ -69,18 +65,14 @@ jobs:
         uses: actions/checkout@v3
         with: {fetch-depth: 0}  # deep clone for setuptools-scm
 
-      - name: Setup Miniconda
-        uses: conda-incubator/setup-miniconda@v2
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
-          channels: conda-forge
-          miniconda-version: "latest"
-          auto-activate-base: false
-          activate-environment: test-env
           python-version: ${{ matrix.python-version }}
 
       - name: Run unit tests
         run: |
-          conda install tox
+          pip install tox
           which python
           which tox
           tox
