--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,9 +41,9 @@ jobs:
       with: {fetch-depth: 0}  # deep clone for setuptools-scm
 
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v3
       with:
-        python-version: "latest"
+        python-version: 3.11
 
     - name: Install tox and start tox with ${{ matrix.tox-envs }}
       run: |
@@ -56,7 +56,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.8, 3.9, 3.10]
+        python-version: [3.8, 3.9, 3.10, 3.11]
     defaults:
       run:
         shell: bash -el {0}
@@ -66,7 +66,7 @@ jobs:
         with: {fetch-depth: 0}  # deep clone for setuptools-scm
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python-version }}
 
@@ -96,17 +96,15 @@ jobs:
         uses: actions/checkout@v3
         with: {fetch-depth: 0}  # deep clone for setuptools-scm
 
-      - name: Setup Miniconda
-        uses: conda-incubator/setup-miniconda@v2
+      - name: Set up Python
+        uses: actions/setup-python@v3
         with:
-          channels: conda-forge
-          miniconda-version: "latest"
-          auto-activate-base: true
+          python-version: 3.11 
 
       - name: Build package
         run: |
-          conda install tox
-          tox
+          pip install tox
+          tox -e build
 
       - name: Upload distribution files
         uses: actions/upload-artifact@v2
@@ -125,12 +123,9 @@ jobs:
       run:
         shell: bash -el {0}
     steps:
-      - name: Setup Miniconda
-        uses: conda-incubator/setup-miniconda@v2
+      - name: Set up Python
+        uses: actions/setup-python@v3
         with:
-          channels: conda-forge
-          miniconda-version: "latest"
-          auto-activate-base: true
           python-version: 3.11
       - name: Retrieve pre-built distribution files
         uses: actions/download-artifact@v3
@@ -144,13 +139,12 @@ jobs:
           TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
         run: |
-          conda install tox
+          pip install tox
           tox -e publish
 
   deploy:
     needs: publish
-    name: Deploy on Anaconda
-    if: ${{ github.event_name == 'push' && contains(github.ref, 'refs/tags/') }}
+    name: Deploy to Anaconda
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -165,7 +159,7 @@ jobs:
           auto-update-conda: false
           auto-activate-base: true
           python-version: 3.11
-      - name: Deploy Package
+      - name: Deploy Package To conda-forge
         run: |
-          conda install tox
-          tox -e conda-package
+          conda install conda-build conda-verify
+          conda-build
