Update tox.ini remove coverage options
These coverage options moped to .coveragerc file instead

--- a/tox.ini
+++ b/tox.ini
@@ -31,8 +31,8 @@ deps =
     pytest-mock
     pytest-fixture-config
 commands =
-    # run pytest with coverage reporting with junitxml output inside COVERAGE_FILE
-    pytest --cov --cov-branch --junitxml={env:COVERAGE_FILE}.xml --cov-report=term {posargs}
+    # run pytest with coverage reporting from .coveragerc
+    pytest --cov --cove-config {posargs}
 
 [testenv:clean]
 description =
@@ -55,7 +55,7 @@ commands_post =
 description = Perform static analysis and style checks
 parallel_show_output = False
 skip_install = True
-conda_deps = pre-commit
+deps = pre-commit
 passenv =
     HOMEPATH
     PROGRAMDATA
