Update tox.ini remove wrong argument

--- a/tox.ini
+++ b/tox.ini
@@ -32,7 +32,7 @@ deps =
     pytest-fixture-config
 commands =
     # run pytest with coverage reporting from .coveragerc
-    pytest --cov --cove-config {posargs}
+    pytest --cov {posargs}
 
 [testenv:clean]
 description =
