--- a/.coveragerc
+++ b/.coveragerc
@@ -4,7 +4,7 @@ source = ats_linter
 omit =
     */site-packages/*
     */distutils/*
-    tests/*
+    */tests/*
 parallel = True
 concurrency = multiprocessing
 branch = True
@@ -12,7 +12,7 @@ data_file = $COVERAGE_FILE
 
 [paths]
 source =
-    src/
+    src/*
 
 [report]
 # Regexes for lines to exclude from consideration
