Update pytest.ini addopts configure

--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-addopts = ignore=tests/test_template1.py --log-cli-level=INFO --log-cli-format='%(asctime)s %(levelname)s: %(message)s'
+addopts = -vv -s --ignore=tests/test_template1.py --log-cli-level=INFO --log-cli-format='%(asctime)s %(levelname)s: %(message)s'
 
 [loggers]
 keys = root
@@ -16,7 +16,7 @@ handlers = file
 
 [handler_file]
 class = handlers.RotatingFileHandler
-args = ('output/logfile.log', 'a', 1024, 3)
+args = ('output/pytest.log', 'a', 1024, 3)
 formatter = simple
 
 [formatter_simple]
