Update pytest.ini add options

--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -1,5 +1,6 @@
 [pytest]
-addopts = -vv -s --ignore=tests/test_template1.py --log-cli-level=INFO --log-cli-format='%(asctime)s %(levelname)s: %(message)s'
+addopts = 
+    --cov -vv -s --ignore=tests/test_template1.py --log-cli-level=INFO --log-cli-format='%(asctime)s %(levelname)s: %(message)s' tests
 
 [loggers]
 keys = root
