Update tox.ini remove pytest args and using pytest.ini

--- a/tox.ini
+++ b/tox.ini
@@ -32,7 +32,7 @@ deps =
     pytest-fixture-config
 commands =
     # run pytest with coverage reporting from .coveragerc
-    pytest --cov {posargs}
+    {posargs:pytest}
 
 [testenv:clean]
 description =
