--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -1,25 +1,9 @@
 [pytest]
+testpaths = tests
 addopts = 
-    --cov -vv -s --ignore=tests/test_template1.py --log-cli-level=INFO --log-cli-format='%(asctime)s %(levelname)s: %(message)s' tests
-
-[loggers]
-keys = root
-
-[handlers]
-keys = file
-
-[formatters]
-keys = simple
-
-[logger_root]
-level = INFO
-handlers = file
-
-[handler_file]
-class = handlers.RotatingFileHandler
-args = ('output/pytest.log', 'a', 1024, 3)
-formatter = simple
-
-[formatter_simple]
-format = %(asctime)s %(levelname)s: %(message)s
-datefmt = %Y-%m-%d %H:%M:%S
+    --cov -vv --ignore=tests/test_template1.py 
+log_file = output/pytest_output.log
+log_cli = True
+log_cli_level = INFO
+log_cli_date_format = %Y-%m-%d %H:%M:%S
+log_cli_format = %(asctime)s %(levelname)s: %(message)s
