Update tox.ini add confcutdir for pytest.ini

--- a/tox.ini
+++ b/tox.ini
@@ -32,7 +32,7 @@ deps =
     pytest-fixture-config
 commands =
     # run pytest with coverage reporting from .coveragerc
-    {posargs:pytest}
+    {posargs:pytest --confcutdir={toxinidir}/tests}
 
 [testenv:clean]
 description =
