Update tox.ini distributed tests an correct pytest.ini path

--- a/tox.ini
+++ b/tox.ini
@@ -30,13 +30,14 @@ deps =
     pytest-cov
     pytest-mock
     pytest-fixture-config
+    pytest-xdist
+changedir = tests
 commands =
     # run pytest with coverage reporting from .coveragerc
-    {posargs:pytest --confcutdir={toxinidir}/tests}
-
+    {posargs: pytest --basetemp="{envtmpdir}" --confcutdir=. -n 3}
 [testenv:clean]
 description =
-    Clean the entire project from build, dist, cache files and coverage and .tox envs
+    Clean the entire project fr9om build, dist, cache files and coverage and .tox envs
     But not .tox/clean env
 skip_install = True
 skipsdist = True
