--- a/tox.ini
+++ b/tox.ini
@@ -34,7 +34,7 @@ deps =
 changedir = tests
 commands =
     # run pytest with coverage reporting from .coveragerc
-    {posargs: pytest --basetemp="{envtmpdir}" --confcutdir=. -n 3}
+    {posargs: pytest --basetemp="{envtmpdir}" --confcutdir=tests -n 3}
 [testenv:clean]
 description =
     Clean the entire project fr9om build, dist, cache files and coverage and .tox envs
