Update pytest.ini correct the testpaths

--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-testpath = .
+testpaths = tests
 addopts = 
     --cov --cov-config=../.coveragerc -vv --ignore=tests/test_template1.py 
 log_file = output/pytest_output.log
