--- a/tox.ini
+++ b/tox.ini
@@ -33,7 +33,7 @@ deps =
     pytest-xdist
 commands =
     # run pytest with coverage reporting from .coveragerc
-    {posargs: pytest --basetemp="{envtmpdir}" --confcutdir=tests -n 3}
+    {posargs: pytest --basetemp="{envtmpdir}" -c tests/pytest.ini -n 3}
 [testenv:clean]
 description =
     Clean the entire project fr9om build, dist, cache files and coverage and .tox envs
