Update tox.ini rootpath

--- a/tox.ini
+++ b/tox.ini
@@ -31,10 +31,9 @@ deps =
     pytest-mock
     pytest-fixture-config
     pytest-xdist
-    chdir = tests
 commands =
     # run pytest with coverage reporting from .coveragerc
-    {posargs: pytest --basetemp="{envtmpdir}" -n 3}
+    {posargs: pytest --rootdir={toxinidir}/tests --basetemp="{envtmpdir}" -n 3}
 [testenv:clean]
 description =
     Clean the entire project fr9om build, dist, cache files and coverage and .tox envs
