--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -1,7 +1,7 @@
 [pytest]
-testpaths = tests
+testpaths = .
 addopts = 
-    --cov --cov-config=../.coveragerc -vv --ignore=tests/test_template1.py 
+    --cov --cov-config="../.coveragerc" -vv --ignore=test_template1.py 
 log_file = output/pytest_output.log
 log_cli = True
 log_cli_level = INFO
