Update tox.ini change_ dir

--- a/tox.ini
+++ b/tox.ini
@@ -31,6 +31,7 @@ deps =
     pytest-mock
     pytest-fixture-config
     pytest-xdist
+change_dir = tests
 commands =
     # run pytest with coverage reporting from .coveragerc
     {posargs: pytest --rootdir={toxinidir}/tests --basetemp="{envtmpdir}" -n 3}
