--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -3,6 +3,7 @@
   description: Lint Python test descriptions and test code with schema from a test template.
   entry: ats-linter
   language: python
+  language_version: python3.11
   types: [python]
   include: ^**/test_.*\.py$
   args: []
