--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,13 @@ dynamic = [
 ]
 keywords = ["automation", "test", "lint", "ats-linter", "pytest", "unittest"]
 
+[project.optional-dependencies]
+dev = [
+    "pytest",
+    "pytest-mock",
+    "pre-commit",
+]
+
 [project.urls]
 Documentation = "https://ats-linter.readthedocs.io"
 Download = "https://pypi.python.org/pypi/ats-linter"
