fix the directory when build with tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -73,6 +73,7 @@ description =
     clean: Remove old distribution files and temporary build artifacts (./build and ./dist)
 skip_install = True
 skipsdist = True
+changedir = {toxinidir}
 passenv =
     SETUPTOOLS_*
 deps =
