add pytets-xdist for parallel run

--- a/tox.ini
+++ b/tox.ini
@@ -31,6 +31,7 @@ deps =
     pytest-cov
     pytest-mock
     pytest-fixture-config
+    pytest-xdist
 commands =
     # run pytest with coverage reporting from .coveragerc
     {posargs: pytest --rootdir={toxinidir}/tests --basetemp="{envtmpdir}" --cov=src/ats_linter --cov-report=html --cov-report=xml --cov-report=term-missing -n 3}
