--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,8 @@ authors = [
 ]
 requires-python = ">=3.11"
 readme = "README.rst"
-license = {file = "LICENSE.txt"}
+license = "MIT"
+license-files = ["LICENSE", "LICENSE"]
 classifiers = [
     "Development Status :: 5 - Production/Stable",
     "Environment :: Console",
@@ -48,6 +49,7 @@ keywords = ["automation", "test", "lint", "ats-linter", "pytest", "unittest"]
 dev = [
     "pytest",
     "pytest-mock",
+    "pytest-asyncio",
     "pre-commit",
 ]
 
