build: set PYTHONPATH for tox and fix pytest rootdir for coverage

--- a/tox.ini
+++ b/tox.ini
@@ -20,6 +20,7 @@ setenv =
     PIP_DISABLE_PIP_VERSION_CHECK = 1
     PIP_DEFAULT_TIMEOUT = 300
     py3{11,12,13}: COVERAGE_FILE = {toxworkdir}/.coverage.{envname}
+    PYTHONPATH = {toxinidir}/src
 passenv =
     HOME
     SETUPTOOLS_*
@@ -32,9 +33,10 @@ deps =
     pytest-mock
     pytest-fixture-config
     pytest-xdist
+    pytest-asyncio
 commands =
     # run pytest with coverage reporting from .coveragerc
-    {posargs: pytest --rootdir={toxinidir}/tests --basetemp="{envtmpdir}" --cov=src/ats_linter --cov-report=html --cov-report=xml --cov-report=term-missing -n 3}
+    {posargs: pytest --rootdir={toxinidir} --basetemp="{envtmpdir}" --cov=src/ats_linter --cov-report=html --cov-report=xml --cov-report=term-missing -n 3}
 [testenv:clean]
 description =
     Clean the entire project fr9om build, dist, cache files and coverage and .tox envs
