--- a/.githooks.d/pre-commit_environment.yml
+++ b/.githooks.d/pre-commit_environment.yml
@@ -13,6 +13,7 @@ dependencies:
   - pytest-fixture-config
   - pre-commit
   - loguru
+  - tox
   - pip:
       - setuptools>=61
       - setuptools_scm[toml]>=6.2
