--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@ allowlist_externals =
 sitepackages = False
 conda_channels =
     conda-forge
-    defaults
+    nodefaults
 setenv =
     TOXINIDIR = {toxinidir}
     PIP_DISABLE_PIP_VERSION_CHECK = 1
