--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,37 +61,85 @@ Repository = "https://github.com/aydabd/ats-linter"
 [project.scripts]
 ats-linter = "ats_linter.cli:run"
 
-[tool.black]
-line-length = 88
-target-version = ["py311", "py312"]
-include = '\.pyi?$'
+[tool.coverage.run]
+source = ["src/ats_linter"]
+omit = [
+        "**/site-packages/**",
+        "**/distutils/**",
+        "**/tests/**"
+]
+branch = true
+disable_warnings = ["no-data-collected"]
 
-exclude = '''
-(
-    \.eggs
-  | \.git
-  | \.hg
-  | \.mypy_cache
-  | \.tox
-  | \.venv
-  | _build
-  | buck-out
-  | build
-  | dist
-  | \.gpg
-  | tests
-)
-'''
+[tool.coverage.report]
+fail_under = 10
+omit = ["tests/*"]
+exclude_lines = [
+        "pragma: no cover",
+        "def __repr__",
+        "if self\\.debug",
+        "raise AssertionError",
+        "raise NotImplementedError",
+        "if 0:",
+        "if __name__ == .__main__.:"
+]
+show_missing = true
+ignore_errors = true
 
-[tool.pytest.ini_options]
-testpaths = ["tests"]
-addopts = "-ra --cov=ats_linter -vv --ignore=test_template1.py"
-log_file = "output/pytest_output.log"
-log_cli = true
-log_cli_level = "INFO"
-log_cli_date_format = "%Y-%m-%d %H:%M:%S"
-log_cli_format = "%(asctime)s %(levelname)s: %(message)s"
-asyncio_mode = "auto"
+[tool.coverage.html]
+directory = "coverage_html"
+
+[tool.coverage.junit]
+output = "coverage.xml"
 
 [tool.codespell]
 ignore-words = ".codespell-ignore"
+
+[tool.ruff]
+line-length = 88
+extend-exclude = [
+    "__init__.py",
+    ".tox",
+    "build",
+    "dist",
+    ".eggs",
+    "docs/conf.py",
+]
+
+[tool.ruff.lint]
+select = [
+    # pycodestyle
+    "E",
+    # Pyflakes
+    "F",
+    # pyupgrade
+    "UP",
+    # flake8-bugbear
+    "B",
+    # flake8-simplify
+    "SIM",
+    # isort
+    "I",
+    # pydocstyle
+    "D",
+]
+ignore = ["E203"]
+
+[tool.ruff.lint.per-file-ignores]
+"tests/*.py" = [
+    "D101", "D1", "S1",
+    "ANN201", "ANN204", "D4",
+    "D207", "D205", "INP001",
+    "ANN001", "ARG002", "PLR2004",
+    "EXE002", "ARG005", "ERA001", "ARG001",
+    "ANN202", "EM101", "TRY003"]
+
+[tool.ruff.isort]
+known-first-party = ["ats_linter"]
+known-third-party = ["pytest", "loguru"]
+combine-as-imports = true
+
+[tool.ruff.format]
+quote-style = "double"
+skip-magic-trailing-comma = false
+line-ending = "auto"
