feat: add typer and colorama dependencies for modern CLI
- Add typer for modern, typed CLI framework
- Add colorama for cross-platform colored output
- Update both conda environment and pyproject.toml dependencies
- Move ruff isort config to lint.isort section for latest ruff compatibility

--- a/.githooks.d/pre-commit_environment.yml
+++ b/.githooks.d/pre-commit_environment.yml
@@ -14,6 +14,8 @@ dependencies:
   - pre-commit
   - loguru
   - tox
+  - typer
+  - colorama
   - pip:
       - setuptools>=61
       - setuptools_scm[toml]>=6.2
