--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,8 @@ classifiers = [
 ]
 dependencies = [
     "loguru",
+    "typer",
+    "colorama",
 ]
 dynamic = [
     "version",
@@ -125,6 +127,11 @@ select = [
 ]
 ignore = ["E203"]
 
+[tool.ruff.lint.isort]
+known-first-party = ["ats_linter"]
+known-third-party = ["pytest", "loguru"]
+combine-as-imports = true
+
 [tool.ruff.lint.per-file-ignores]
 "tests/*.py" = [
     "D101", "D1", "S1",
@@ -133,11 +140,6 @@ ignore = ["E203"]
     "ANN001", "ARG002", "PLR2004",
     "EXE002", "ARG005", "ERA001", "ARG001",
     "ANN202", "EM101", "TRY003"]
-
-[tool.ruff.isort]
-known-first-party = ["ats_linter"]
-known-third-party = ["pytest", "loguru"]
-combine-as-imports = true
 
 [tool.ruff.format]
 quote-style = "double"
